#          Copyright Joe Coder 2004 - 2006.
#  Distributed under the Boost Software License, Version 1.0.
#    (See accompanying file LICENSE_1_0.txt or copy at
#          https://www.boost.org/LICENSE_1_0.txt)

cmake_minimum_required(VERSION 3.8)
project(PusherClient CXX)

add_subdirectory(PusherClient)
